Bug 15752 - winexe no longer works with samba 4.21
Summary: winexe no longer works with samba 4.21
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Other (show other bugs)
Version: 4.21.1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-11-13 09:59 UTC by Pavel Filipenský
Modified: 2024-11-25 15:10 UTC (History)
2 users (show)

See Also:


Attachments
patch for v4-21-test (1.53 KB, patch)
2024-11-14 05:44 UTC, Pavel Filipenský
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pavel Filipenský 2024-11-13 09:59:19 UTC
This no longer workswith samba-4.21:

bin/winexe  -U Administrator%Secret123 //<IP> systeminfo

It is a regression of:
 a39cb60 examples:winexe: Fully initialize EXPLICIT_ACCESS


Fix will follow
Comment 1 Samba QA Contact 2024-11-13 15:48:03 UTC
This bug was referenced in samba master:

50f3273e8283c9dabeca3c899b90ad831657b12a
Comment 2 Pavel Filipenský 2024-11-14 05:44:07 UTC
Created attachment 18496 [details]
patch for v4-21-test
Comment 3 Andreas Schneider 2024-11-14 10:23:25 UTC
Jule, please include the patch for next 4.21 release. Tahnks!
Comment 4 Jule Anger 2024-11-14 12:59:02 UTC
Pushed to autobuild-v4-21-test.
Comment 5 Samba QA Contact 2024-11-14 14:07:03 UTC
This bug was referenced in samba v4-21-test:

0c3379c5bd80dba480d33757a29a5ae249375914
Comment 6 Jule Anger 2024-11-18 07:54:41 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2024-11-25 15:10:52 UTC
This bug was referenced in samba v4-21-stable (Release samba-4.21.2):

0c3379c5bd80dba480d33757a29a5ae249375914